src/app/components/home/home.component.scss
.banner {
  background: url("../../../assets/images/home/mobile/image-header.jpg")
    no-repeat;
  background-size: cover;
  background-position-y: -6rem;
}

.banner__content {
  padding: 6.75rem 0 7rem;
}

.banner__heading {
  color: var(--clr-white-900);
  text-align: center;
  font-size: 2.25rem;
  font-weight: 700;
  line-height: 1.1;
  letter-spacing: 0.08038rem;
  text-transform: uppercase;
  white-space: pre-line;
  span {
    display: block;
    font-size: 0.875rem;
    font-weight: 400;
    letter-spacing: 0.625rem;
    opacity: 0.4964;
    margin-bottom: 1rem;
  }
}

.banner__description {
  color: var(--clr-white-900);
  text-align: center;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.66;
  opacity: 0.75;
  margin: 1.5rem 2rem 1.75rem;
}

.banner__anchor {
  display: block;
  text-align: center;
  margin: 0 auto;
  width: 10.2rem;
  padding: 0.94rem 1.84rem 0.94rem 1.97rem;
  color: var(--clr-white-900);
  background-color: var(--clr-primary);
  font-size: 0.8125rem;
  font-weight: 700;
  letter-spacing: 0.0625rem;
  text-transform: uppercase;
  &:hover {
    background-color: var(--crl-primary-hover);
  }
}

.banner__image {
  display: none;
}

@media (min-width: 43em) {
  .banner {
    background: url("../../../assets/images/home/tablet/image-header-t.jpg")
      no-repeat;
    background-size: cover;
    background-position-y: -6rem;
  }
  .banner__content {
    padding: 7.88rem 0 10.4375rem;
  }
  .banner__heading {
    font-size: 3.5rem;
    letter-spacing: 0.125rem;
    span {
      margin-bottom: 1.5rem;
    }
  }
  .banner__description {
    margin: 1.5rem 13rem 2.5rem;
  }
}

@media (min-width: 75em) {
  .banner__container {
    background: var(--clr-black-700);
  }
  .banner {
    background: var(--clr-black-700)
      url("../../../assets/images/home/desktop/image-hero.jpg") no-repeat;
    background-position: -10rem -6rem;
    background-size: 90rem;
    width: 69.36456rem;
    margin: 0 auto;
  }
  .banner__content {
    padding: 8rem 0 9.88rem;
  }
  .banner__heading {
    text-align: left;
  }
  .banner__description {
    text-align: left;
    margin: 1.5rem 0 2.5rem;
    width: 21.8125rem;
  }
  .banner__anchor {
    margin: 0;
  }
}

